ui/app2/src/main/java/org/activityinfo/ui/client/page/common/Application.css
@external .*;

/*
 * #%L
 * ActivityInfo Server
 * %%
 * Copyright (C) 2009 - 2013 UNICEF
 * %%
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>.
 * #L%
 */

.loading-placeholder,
.gallery,
.details
{
    font-family: Arial, sans-serif;
}

.loading-placeholder {
    color: rgb(192, 192, 192);
    font-weight: 900;
    font-size: 15px;
    background: url("/ActivityInfo/gxt231/images/default/shared/large-loading.gif") no-repeat;
    padding-left: 50px;
    padding-top: 5px;
    padding-bottom: 8px;
    width: 300px;
}

.appTitle {
    font-weight: bold;
    font-size: 10pt;
}

.mapped {
    background-image: url(ActivityInfo/image/mapped.gif);
    width: 10px;
    height: 16px;
}

.unmapped {
    background-image: url(ActivityInfo/image/unmapped.gif);
    width: 10px;
    height: 16px;
}

.details {
    padding-left: 5px;
    padding-top: 5px;
}

.details p {
    margin-top: 5px;
    font-size: 11px;
}

.details span.groupName {
    color: #15428B;
    font-weight: bold;
}

.details .indicatorTable {
    border: 0 none;
    margin-left: 2px;
}

.details .indicatorTable td {
    vertical-align: top;
    font-size: 11px;
    border-bottom: 1px solid #C8C8C8;
    padding-right: 10px;
}

.details td.indicatorHeading {
    max-width: 250px;
}

.details .indicatorGroupHeading {
    color: #15428B;
    font-weight: bold;
    padding-top: 10px;
}

.details .indicatorValue {
    text-align: right;
}

.details .indicatorGroupChild {
    padding-left: 15px;
}

.details p.comments {
    margin-top: 10px;
}

.gallery {
    margin-left: 10px;
}

.gallery h3 {
    color: #db7214;
    font: 18px "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
    padding-top: 20px;
    padding-left: 15px;
    margin-bottom: 20px;

}

.gallery dd {
    cursor: pointer;
    float: left;
    height: 100px;
    margin: 5px 5px 5px 10px;
    width: 300px;
}

.gallery dd img {
    float: left;
    height: 90px;
    margin: 5px 0 0 5px;
    width: 120px;
}

.gallery dd div {
    float: left;
    margin-left: 10px;
    width: 160px;
}

.gallery dd h4 {
    color: #555555;
    margin: 5px 0;
    font-family: tahoma, arial, sans-serif;
    font-size: 11px;
    font-weight: bold;
}

.gallery dd p {
    color: #777777;
    font-size: 11px;
}

.gallery dd.over {
    background: #F5FDE3 url(ActivityInfo/image/gallery-over.gif) no-repeat scroll 0 0;
}

.gallery .loading-indicator {
    font-size: 11px;
    background: url('/ActivityInfo/gxt231/images/default/shared/large-loading.gif') no-repeat left;
    padding-left: 20px;
    margin: 10px;
}


/* Used in PivotGridView */
.cell-hover {
    background-color: #C9E3FF;
}

